[tool.poetry]
name = "ft-prepare"
version = "0.1.0"
description = "prepare dataset for fine-tuning OpenAI models"
authors = ["Alan-Kuan <kuanhaoan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
pandas = "^1.5.3"
openai = "^0.27.2"
streamlit = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
